--- a/source/components/layout/index.scss
+++ b/source/components/layout/index.scss
@@ -8,6 +8,7 @@
 
 .nav {
     grid-area: nav;
+    z-index: 2;
 }
 
 .main {
